[package]
name = "special-zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.7"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.1.18", features = [ "derive" ] }
walkdir = "2"
#brotli = "3.3.4"
async-compression = { version = "0.3.14", features = ["tokio", "brotli"] }
